--- a/public/about.html
+++ b/public/about.html
@@ -281,50 +281,50 @@
         <img src="./src/assets/images/The Initiative PH 1.png" class="the_initiative_ph_logo" alt="the_initiative_ph">
         <h4>The Initiative PH</h4>
         <div>
-          <a href="https://www.facebook.com/theinitiativeph/" target="_blank" rel="noopener noreferrer"><img
+          <!-- <a href="https://www.facebook.com/theinitiativeph/" target="_blank" rel="noopener noreferrer"><img
               src="./src/assets/images/about_fb.png" alt="fb_icon"></a>
           <a href="https://twitter.com/theinitiativeph/" target="_blank" rel="noopener noreferrer"><img
-              src="./src/assets/images/about_twitter.png" alt="twitter_icon"></a>
+              src="./src/assets/images/about_twitter.png" alt="twitter_icon"></a> -->
         </div>
       </div>
       <div class="org">
         <img src="./src/assets/images/Kadiwa 1.png" class="kadiwa_logo" alt="kadiwa">
         <h4>Kadiwa Student Coaliton</h4>
         <div>
-          <a href="#" target="_blank" rel="noopener noreferrer"><img src="./src/assets/images/about_fb.png"
+          <!-- <a href="#" target="_blank" rel="noopener noreferrer"><img src="./src/assets/images/about_fb.png"
               alt="fb_icon"></a>
           <a href="#" target="_blank" rel="noopener noreferrer"><img src="./src/assets/images/about_twitter.png"
-              alt="twitter_icon"></a>
+              alt="twitter_icon"></a> -->
         </div>
       </div>
       <div class="org">
         <img src="./src/assets/images/kilos_logo.jpg" class="kilos_logo" alt="kilos">
         <h4>KILOS Youth</h4>
         <div>
-          <a href="#" target="_blank" rel="noopener noreferrer"><img src="./src/assets/images/about_fb.png"
+          <!-- <a href="#" target="_blank" rel="noopener noreferrer"><img src="./src/assets/images/about_fb.png"
               alt="fb_icon"></a>
           <a href="#" target="_blank" rel="noopener noreferrer"><img src="./src/assets/images/about_twitter.png"
-              alt="twitter_icon"></a>
+              alt="twitter_icon"></a> -->
         </div>
       </div>
       <div class="org">
         <img src="./src/assets/images/advocates_logo.png" class="advocates_logo" alt="advocates">
         <h4>Youth Advocates for the Philippines</h4>
         <div>
-          <a href="#" target="_blank" rel="noopener noreferrer"><img src="./src/assets/images/about_fb.png"
+          <!-- <a href="#" target="_blank" rel="noopener noreferrer"><img src="./src/assets/images/about_fb.png"
               alt="fb_icon"></a>
           <a href="#" target="_blank" rel="noopener noreferrer"><img src="./src/assets/images/about_twitter.png"
-              alt="twitter_icon"></a>
+              alt="twitter_icon"></a> -->
         </div>
       </div>
       <div class="org">
         <img src="./src/assets/images/skc_logo.jpg" class="skc_logo" alt="skc">
         <h4>Sigaw ng Kabataan Coalition</h4>
         <div>
-          <a href="#" target="_blank" rel="noopener noreferrer"><img src="./src/assets/images/about_fb.png"
+          <!-- <a href="#" target="_blank" rel="noopener noreferrer"><img src="./src/assets/images/about_fb.png"
               alt="fb_icon"></a>
           <a href="#" target="_blank" rel="noopener noreferrer"><img src="./src/assets/images/about_twitter.png"
-              alt="twitter_icon"></a>
+              alt="twitter_icon"></a> -->
         </div>
       </div>
     </div>
