--- a/public/contact.html
+++ b/public/contact.html
@@ -125,8 +125,8 @@
           <div class="flex-images">
             <img src="./src/assets/icons/GoodGovPH.png" alt="GoodGovPH" />
             <img src="./src/assets/icons/DSC.png" alt="DSC Loyola" />
-            <img src="./src/assets/icons/The Initiative PH.png" alt="Initiative PH" />
-            <img src="./src/assets/icons/Kadiwa.png" alt="Kadiwa" />
+            <!-- <img src="./src/assets/icons/The Initiative PH.png" alt="Initiative PH" />
+            <img src="./src/assets/icons/Kadiwa.png" alt="Kadiwa" /> -->
           </div>
         </div>
 
