--- a/public/index.html
+++ b/public/index.html
@@ -77,9 +77,9 @@
           <a href="volunteers.html" rel="noopener noreferrer">Volunteers</a>
         </div>
       </li>
-      <li>
+      <!-- <li>
         <a class="faqs" href="faqs.html">FAQs</a>
-      </li>
+      </li> -->
       <li>
         <a class="team" href="teams.html">Team</a>
       </li>
@@ -114,9 +114,11 @@
     <div class="survey_content">
       <h1>WEEKLY LGU <br> RESPONSE SURVEY </h1>
       <p>
-        Gamit ang isang diagnostic tool (survey), linggo-linggong inaaseso ng bawat bantay-bayan ang LGU base.
+        Gamit ang isang diagnostic tool (survey), linggo-linggong inaaseso ng bawat bantay-bayan ang LGU base. Narito
+        ang isang <a href="lgu-response-map.html">mapa</a> na nagpapakita ng lawak ng mga tugon ng taong bayan patungkol
+        sa kanilang mga LGU.
       </p>
-      <a href="weekly-reports.html">SUBMIT LGU RESPONSE</a>
+      <a href="weekly-reports.html" id="submit-lgu-response">SUBMIT LGU RESPONSE</a>
     </div>
   </div>
 
