with view lgu button

--- a/public/index.html
+++ b/public/index.html
@@ -115,10 +115,11 @@
       <h1>WEEKLY LGU <br> RESPONSE SURVEY </h1>
       <p>
         Gamit ang isang diagnostic tool (survey), linggo-linggong inaaseso ng bawat bantay-bayan ang LGU base. Narito
-        ang isang <a href="lgu-response-map.html">mapa</a> na nagpapakita ng lawak ng mga tugon ng taong bayan patungkol
+        ang isang mapa na nagpapakita ng lawak ng mga tugon ng taong bayan patungkol
         sa kanilang mga LGU.
       </p>
       <a href="weekly-reports.html" id="submit-lgu-response">SUBMIT LGU RESPONSE</a>
+      <a href="lgu-response-map.html" id="view-lgu-response">VIEW LGU RESPONSE</a>
     </div>
   </div>
 
