--- a/public/volunteers.html
+++ b/public/volunteers.html
@@ -88,7 +88,7 @@
     <div class="container">
         <iframe
             src="https://docs.google.com/forms/d/e/1FAIpQLScbS4ntKWTHymvtEOBUTDkK_zFyR7WfwEiAjWPZhzKYJg0gAw/viewform?embedded=true"
-            style="width: 100%; height: 100%; overflow-x: hidden !important;" frameborder="0" marginheight="0"
+            style="width: 100%; height: 100vh; overflow-x: hidden !important;" frameborder="0" marginheight="0"
             marginwidth="0">Loading…</iframe>
     </div>
 
