--- a/public/weekly-reports.html
+++ b/public/weekly-reports.html
@@ -88,7 +88,7 @@
   <div class="container">
     <iframe
       src="https://docs.google.com/forms/d/e/1FAIpQLSfv01pv85Bo5uQOypv-nTWeVahg0DmBgCjnRTJI6i0650GyYw/viewform?embedded=true"
-      style="width: 100%; height: 100%; overflow-x: hidden !important;" frameborder="0" marginheight="0"
+      style="width: 100%; height: 100vh; overflow-x: hidden !important;" frameborder="0" marginheight="0"
       marginwidth="0">Loading…</iframe>
   </div>
 
