--- a/public/volunteers.html
+++ b/public/volunteers.html
@@ -4,15 +4,20 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bantay Bayan</title>
-
-    <meta name="description" content="" />
-
-    <!-- Facebook Meta -->
+    <title>Volunteers | Bantay Bayan</title>
     <meta property="og:title" content="Bantay Bayan" />
+    <meta developer="Harvey Jay Sison" site="https://harveysison.com">
+    <meta developer="Tyrone Justin Sta. Maria" site="https://github.com/tanzellgo">
     <meta property="og:type" content="website" />
-    <!-- <meta property="og:image" content="http://uxchill.uxsociety.org/uxchillmetadata.png" /> -->
-    <meta property="og:description" content="" />
+    <meta property="og:url" content="https://bantaybayan.com/" />
+    <meta property="og:image" content="http://bantaybayan.com/src/assets/images/hero_image.png" />
+    <meta property="og:image:secure_url" content="https://bantaybayan.com/src/assets/images/hero_image.png" />
+    <meta property="og:site_name" content="Bantay Bayan" />
+    <meta property="og:description"
+        content="Ang Bantay Bayan ay citizen-watch program na inilunsad ng GoodGov PH upang siguraduhin na ang ating mga lokal na pamahalaan (LGU) ay may ginagawang mga hakbang sa mga pangangailangan ng mga mamamayan sa panahon ng krisis tulad ng COVID-19." />
+    <meta name="description"
+        content="Ang Bantay Bayan ay citizen-watch program na inilunsad ng GoodGov PH upang siguraduhin na ang ating mga lokal na pamahalaan (LGU) ay may ginagawang mga hakbang sa mga pangangailangan ng mga mamamayan sa panahon ng krisis tulad ng COVID-19." />
+
 
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/7.14.0/firebase-app.js"></script>
