--- a/public/volunteers.html
+++ b/public/volunteers.html
@@ -7,7 +7,7 @@
     <title>Volunteers | Bantay Bayan</title>
     <meta property="og:title" content="Bantay Bayan" />
     <meta developer="Harvey Jay Sison" site="https://harveysison.com">
-    <meta developer="Tyrone Justin Sta. Maria" site="https://github.com/tanzellgo">
+    <meta developer="Tanzell Go" site="https://github.com/tanzellgo">
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://bantaybayan.com/" />
     <meta property="og:image" content="http://bantaybayan.com/src/assets/images/hero_image.png" />
