first revision: homepage, aboutpage, teampage, contactpage. missing primer link and primer

--- a/public/contact.html
+++ b/public/contact.html
@@ -130,19 +130,20 @@
           <div class="flex-images">
             <img src="./src/assets/icons/GoodGovPH.png" alt="GoodGovPH" />
             <img src="./src/assets/icons/DSC.png" alt="DSC Loyola" />
-            <!-- <img src="./src/assets/icons/The Initiative PH.png" alt="Initiative PH" />
-            <img src="./src/assets/icons/Kadiwa.png" alt="Kadiwa" /> -->
+            <img src="./src/assets/images/skc_logo.jpg" alt="SKC" />
+            <img src="./src/assets/images/kilos_logo.jpg" alt="Kilos" />
+            <img src="./src/assets/icons/The Initiative PH.png" alt="Initiative PH" />
+            <img src="./src/assets/images/advocates_logo.png" alt="Youth Adcovates" />
+
           </div>
         </div>
 
         <div>
-          <h2>Maaaring makipag-ugnayan kay:</h2>
-          <br />
           <div id="contact-details">
-            <h2>Ashley De Quiroz</h2>
-            <p>Direktor, Bantay Bayan</p>
-            <p>0977 163 9979</p>
+            <h2>For inquiries, contact us at</h2>
             <a href="mailto:goodgovph.official@gmail.com">goodgovph.official@gmail.com</a>
+            <h2>For partnerships:</h2>
+            <a href="mailto:partnerships.bantaybayan@gmail.com">partnerships.bantaybayan@gmail.com</a>
             <div id="social-media">
               <a href="https://www.facebook.com/GoodGovPH/" target="_blank" rel="noopener noreferrer">
                 <img src="./src/assets/icons/facebook.png" alt="facebook" />
@@ -171,7 +172,7 @@
             </svg>
           </a>
 
-          <a href="https://www.facebook.com/BantayBayanTayo" target="_blank" rel="noopener noreferrer">
+          <a href="https://twitter.com/bantaybayantayo" target="_blank" rel="noopener noreferrer">
             <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
               <circle cx="24" cy="24" r="23" stroke="#333333" stroke-width="2" />
               <path
