--- a/public/help-desk.html
+++ b/public/help-desk.html
@@ -111,7 +111,7 @@
             </svg>
           </a>
 
-          <a href="https://www.facebook.com/BantayBayanTayo" target="_blank" rel="noopener noreferrer">
+          <a href="https://twitter.com/bantaybayantayo" target="_blank" rel="noopener noreferrer">
             <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
               <circle cx="24" cy="24" r="23" stroke="#333333" stroke-width="2" />
               <path
