--- a/public/index.html
+++ b/public/index.html
@@ -100,8 +100,8 @@
     <div class="helpdesk_content">
       <h1>BANTAY BAYAN <br> HELP DESK </h1>
       <p>
-        Gamit ang Bantay Bayan Helpdesk, maaaring mag-sumite ng tanong o reklamo ang bawat mamamayan ukol sa
-        pag-responde ng LGU sa <br> COVID-19.
+        The Bantay Bayan Legal Affairs team, composed of lawyers and law students, responds to concerns raised 
+        in the Helpdesk by producing legal recommendations or other legal documents for action.
       </p>
       <a href="help-desk.html">SEEK LEGAL AID</a>
     </div>
@@ -115,14 +115,13 @@
     <img class="survey_pic" src="./src/assets/images/weekly_response.png" alt="survey">
 
     <div class="survey_content">
-      <h1>WEEKLY LGU <br> RESPONSE SURVEY </h1>
+      <h1>LGU WATCH</h1>
       <p>
-        Gamit ang isang diagnostic tool (survey), linggo-linggong inaaseso ng bawat bantay-bayan ang LGU base. Narito
-        ang isang mapa na nagpapakita ng lawak ng mga tugon ng taong bayan patungkol
-        sa kanilang mga LGU.
+        Bantay Bayan mobilizes volunteers nationwide who will monitor the actions of their respective LGUs amid 
+        the COVID-19 crisis. The LGU Response Map visualizes the data gathered from volunteers. 
       </p>
-      <a href="weekly-reports.html" id="submit-lgu-response">SUBMIT LGU RESPONSE</a>
-      <a href="lgu-response-map.html" id="view-lgu-response">VIEW LGU RESPONSE</a>
+      <a href="weekly-reports.html" id="submit-lgu-response">SUBMIT LGU REPORT</a>
+      <a href="lgu-response-map.html" id="view-lgu-response">VIEW LGU RESPONSE MAP</a>
     </div>
   </div>
 
@@ -157,7 +156,7 @@
             </svg>
           </a>
 
-          <a href="https://www.facebook.com/BantayBayanTayo" target="_blank" rel="noopener noreferrer">
+          <a href="https://twitter.com/bantaybayantayo" target="_blank" rel="noopener noreferrer">
             <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
               <circle cx="24" cy="24" r="23" stroke="#333333" stroke-width="2" />
               <path
