--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
 
     <input type="checkbox" class="checkbox" id="check" />
 
-    <a href="index.html">
+    <a href="index.html" rel="noopener noreferrer">
       <img src="./src/assets/images/bantay_bayan_logo.png" class="navLogo" alt="logo" />
     </a>
 
@@ -103,7 +103,7 @@
         The Bantay Bayan Legal Affairs team, composed of lawyers and law students, responds to concerns raised 
         in the Helpdesk by producing legal recommendations or other legal documents for action.
       </p>
-      <a href="help-desk.html">SEEK LEGAL AID</a>
+      <a href="help-desk.html" rel="noopener noreferrer">SEEK LEGAL AID</a>
     </div>
 
     <img src="./src/assets/images/help_desk.png" class="helpdesk_pic">
@@ -120,18 +120,18 @@
         Bantay Bayan mobilizes volunteers nationwide who will monitor the actions of their respective LGUs amid 
         the COVID-19 crisis. The LGU Response Map visualizes the data gathered from volunteers. 
       </p>
-      <a href="weekly-reports.html" id="submit-lgu-response">SUBMIT LGU REPORT</a>
-      <a href="lgu-response-map.html" id="view-lgu-response">VIEW LGU RESPONSE MAP</a>
+      <a href="weekly-reports.html" id="submit-lgu-response" rel="noopener noreferrer">SUBMIT LGU REPORT</a>
+      <a href="lgu-response-map.html" id="view-lgu-response" rel="noopener noreferrer">VIEW LGU RESPONSE MAP</a>
     </div>
   </div>
 
   <div class="volunteer">
     <div class="volunteer_content">
       <div class="volunteer_label">
-        <h1>Mag-volunteer Na!</h1>
-        <h3>Basahin ang primer &#8594;</h3>
+        <h1>Calling for volunteers!</h1>
+        <a href="./src/Bantay Bayan Primer.pdf" target="_blank" rel="noopener noreferrer">Read the primer &#8594;</a>
       </div>
-      <a href="volunteers.html">VOLUNTEER NOW</a>
+      <a href="volunteers.html" class="volunteer_button" rel="noopener noreferrer">VOLUNTEER NOW</a>
       <div class="minimen">
         <img src="./src/assets/images/Volunteers.png">
         <img src="./src/assets/images/Volunteers.png">
