unecessary norel removed, button given hover state, picture of member cropped

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
 
     <input type="checkbox" class="checkbox" id="check" />
 
-    <a href="index.html" rel="noopener noreferrer">
+    <a href="index.html">
       <img src="./src/assets/images/bantay_bayan_logo.png" class="navLogo" alt="logo" />
     </a>
 
@@ -62,22 +62,22 @@
 
       <!--Indepent Forms-->
       <li class="formsdrop_independent">
-        <a href="weekly-reports.html" rel="noopener noreferrer" class="WR_Form">Weekly Reports</a>
+        <a href="weekly-reports.html" class="WR_Form">Weekly Reports</a>
       </li>
       <li class="formsdrop_independent">
-        <a href="help-desk.html" rel="noopener noreferrer" class="HD_Form">Help Desk</a>
+        <a href="help-desk.html" class="HD_Form">Help Desk</a>
       </li>
       <li class="formsdrop_independent">
-        <a href="volunteers.html" rel="noopener noreferrer" class="V_Form">Volunteers</a>
+        <a href="volunteers.html" class="V_Form">Volunteers</a>
       </li>
       <!--End-->
 
       <li id="forms_id">
         <div class="forms">Forms</div>
         <div class="formsdrop">
-          <a href="weekly-reports.html" rel="noopener noreferrer">Weekly Reports</a>
-          <a href="help-desk.html" rel="noopener noreferrer">Help Desk</a>
-          <a href="volunteers.html" rel="noopener noreferrer">Volunteers</a>
+          <a href="weekly-reports.html">Weekly Reports</a>
+          <a href="help-desk.html">Help Desk</a>
+          <a href="volunteers.html">Volunteers</a>
         </div>
       </li>
       <!-- <li>
@@ -103,7 +103,7 @@
         The Bantay Bayan Legal Affairs team, composed of lawyers and law students, responds to concerns raised 
         in the Helpdesk by producing legal recommendations or other legal documents for action.
       </p>
-      <a href="help-desk.html" rel="noopener noreferrer">SEEK LEGAL AID</a>
+      <a href="help-desk.html">SEEK LEGAL AID</a>
     </div>
 
     <img src="./src/assets/images/help_desk.png" class="helpdesk_pic">
@@ -120,8 +120,8 @@
         Bantay Bayan mobilizes volunteers nationwide who will monitor the actions of their respective LGUs amid 
         the COVID-19 crisis. The LGU Response Map visualizes the data gathered from volunteers. 
       </p>
-      <a href="weekly-reports.html" id="submit-lgu-response" rel="noopener noreferrer">SUBMIT LGU REPORT</a>
-      <a href="lgu-response-map.html" id="view-lgu-response" rel="noopener noreferrer">VIEW LGU RESPONSE MAP</a>
+      <a href="weekly-reports.html" id="submit-lgu-response">SUBMIT LGU REPORT</a>
+      <a href="lgu-response-map.html" id="view-lgu-response">VIEW LGU RESPONSE MAP</a>
     </div>
   </div>
 
@@ -131,7 +131,7 @@
         <h1>Calling for volunteers!</h1>
         <a href="./src/Bantay Bayan Primer.pdf" target="_blank" rel="noopener noreferrer">Read the primer &#8594;</a>
       </div>
-      <a href="volunteers.html" class="volunteer_button" rel="noopener noreferrer">VOLUNTEER NOW</a>
+      <a href="volunteers.html" class="volunteer_button">VOLUNTEER NOW</a>
       <div class="minimen">
         <img src="./src/assets/images/Volunteers.png">
         <img src="./src/assets/images/Volunteers.png">
