--- a/public/lgu-response-map.html
+++ b/public/lgu-response-map.html
@@ -61,13 +61,13 @@
 
             <!--Indepent Forms-->
             <li class="formsdrop_independent">
-                <a href="weekly-reports.html" rel="noopener noreferrer" class="WR_Form">Weekly Reports</a>
+                <a href="weekly-reports.html" class="WR_Form">Weekly Reports</a>
             </li>
             <li class="formsdrop_independent">
-                <a href="help-desk.html" rel="noopener noreferrer" class="HD_Form">Help Desk</a>
+                <a href="help-desk.html" class="HD_Form">Help Desk</a>
             </li>
             <li class="formsdrop_independent">
-                <a href="volunteers.html" rel="noopener noreferrer" class="V_Form">Volunteers</a>
+                <a href="volunteers.html" class="V_Form">Volunteers</a>
             </li>
             <!--End-->
 
