org names revised, member named revised

--- a/public/about.html
+++ b/public/about.html
@@ -286,7 +286,7 @@
     <div class="org_content">
       <div class="org">
         <img src="./src/assets/images/good_gov_logo.png" class="org_logos" alt="goodgov">
-        <h4>Youth Advocates for the Philippines</h4>
+        <h4>GoodGovPH</h4>
         <div>
           <!-- <a href="#" target="_blank" rel="noopener noreferrer"><img src="./src/assets/images/about_fb.png"
               alt="fb_icon"></a>
@@ -296,7 +296,7 @@
       </div>
       <div class="org">
         <img src="./src/assets/images/dsc_loyola_logo.png" class="org_logos" alt="dsc">
-        <h4>Sigaw ng Kabataan Coalition</h4>
+        <h4>DSC - Loyola</h4>
         <div>
           <!-- <a href="#" target="_blank" rel="noopener noreferrer"><img src="./src/assets/images/about_fb.png"
               alt="fb_icon"></a>
@@ -500,7 +500,7 @@
       </div>
       <div class="org">
         <img src="./src/assets/images/Ecosoc Logo.png" class="org_logos" alt="ecosoc">
-        <h4>Ecosoc</h4>
+        <h4>UP Economics Society</h4>
         <div>
           <!-- <a href="#" target="_blank" rel="noopener noreferrer"><img src="./src/assets/images/about_fb.png"
               alt="fb_icon"></a>
@@ -520,7 +520,7 @@
       </div>
       <div class="org">
         <img src="./src/assets/images/IGNITE LOGO HD.png" class="org_logos" alt="ignite">
-        <h4>IGNITE</h4>
+        <h4>IGNITE-NCPAG</h4>
         <div>
           <!-- <a href="#" target="_blank" rel="noopener noreferrer"><img src="./src/assets/images/about_fb.png"
               alt="fb_icon"></a>
@@ -630,7 +630,7 @@
       </div>
       <div class="org">
         <img src="./src/assets/images/UP DOST Scholars' Association.png" class="org_logos" alt="scholar">
-        <h4>UP DOST DOST Scholars' Association</h4>
+        <h4>UP DOST Scholars' Association</h4>
         <div>
           <!-- <a href="#" target="_blank" rel="noopener noreferrer"><img src="./src/assets/images/about_fb.png"
               alt="fb_icon"></a>
@@ -650,7 +650,7 @@
       </div>
       <div class="org">
         <img src="./src/assets/images/UP POLSCi Logo.png" class="org_logos" alt="up_polsci">
-        <h4>UP Political Science</h4>
+        <h4>UP Political Society</h4>
         <div>
           <!-- <a href="#" target="_blank" rel="noopener noreferrer"><img src="./src/assets/images/about_fb.png"
               alt="fb_icon"></a>
@@ -690,7 +690,7 @@
       </div>
       <div class="org">
         <img src="./src/assets/images/UST The Political Science Forum.png" class="org_logos" alt="ust_polsci">
-        <h4>UP The  Political Science Forum</h4>
+        <h4>UST The  Political Science Forum</h4>
         <div>
           <!-- <a href="#" target="_blank" rel="noopener noreferrer"><img src="./src/assets/images/about_fb.png"
               alt="fb_icon"></a>
