--- a/public/teams.html
+++ b/public/teams.html
@@ -216,7 +216,7 @@
           <div class="team_members">
             <div class="member">
               <img src="./src/assets/members/Communications_ Aster Mostrales.jpeg" alt="member">
-              <h3>Aster Morales</h3>
+              <h3>Aster Mostrales</h3>
               <h5>COMMUNICATIONS</h5>
             </div>
             <div class="member">
