norel target blank included in footer, remollo pic and position revised

--- a/public/contact.html
+++ b/public/contact.html
@@ -188,7 +188,7 @@
     <div class="footerDSC">
       <hr />
       <label>Passionately Designed and Developed by
-        <a href="https://dscadmu.org">Developer Student Clubs Loyola</a></label>
+        <a href="https://dscadmu.org" target="_blank" rel="noopener noreferrer">Developer Student Clubs Loyola</a></label>
     </div>
   </footer>
   <script src="./src/scripts/jquery.min.js"></script>
