--- a/public/teams.html
+++ b/public/teams.html
@@ -250,9 +250,9 @@
               <h5>WEB DEVELOPMENT</h5>
             </div> 
             <div class="member">
-              <img src="./src/assets/members/download.png" alt="member">
+              <img src="./src/assets/members/Remollo.jpg" alt="member">
               <h3>Beatrice Remollo</h3>
-              <h5>WEB DEVELOPMENT</h5>
+              <h5>DATA SCIENTIST</h5>
             </div>
           </div>
         </div>
@@ -290,7 +290,7 @@
     <div class="footerDSC">
       <hr />
       <label>Passionately Designed and Developed by
-        <a href="https://dscadmu.org">Developer Student Clubs Loyola</a></label>
+        <a href="https://dscadmu.org" target="_blank" rel="noopener noreferrer">Developer Student Clubs Loyola</a></label>
     </div>
   </footer>
 
